--- a/pwfe/Frontend Mentor/Crowdfunding/index.html
+++ b/pwfe/Frontend Mentor/Crowdfunding/index.html
@@ -18,17 +18,62 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="container">
-            <img class ="logo-mastercraft" src="images/logo-mastercraft.svg"/>
-            <span class="mastercraft">Mastercraft Bamboo Monitor Riser</span>
-            <span class="beautiful">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</span>
-            <div class="botoes">
-                <button class="backpro">Back this project</button>
-                <button>Bookmark</button>
+        <div class="meinho">
+            <div class="first-container">
+                <span class="mastercraft">Mastercraft Bamboo Monitor Riser</span>
+                <span class="beautiful">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</span>
+                <div class="botoes">
+                    <button class="backpro">Back this project</button>
+                    <button>Bookmark</button>
+                </div>
             </div>
+
+            <div class="second-container">
+                <div class="numeros">
+                    <div class="dinheiros">
+                        <span class="negrito">$89,914</span>
+                        <span class="sem-negrito">of $100,000 backed</span>
+                    </div>
+                    <div class="backers">
+                        <span class="negrito">5,007</span>
+                        <span class="sem-negrito">total backers</span>
+                    </div>
+                    <div class="daysleft">
+                        <span class="negrito">56</span>
+                        <span class="sem-negrito">days left</span>
+                    </div>
+                </div>
+                <progress class="progress" value="75" max="100"></progress>
+            </div>
+
+            <div class="third-container">
+                <div class="textos">
+                    <span class="about">About this project</span>
+                    <span class="textinho">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
+                        to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
+                        your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+                      </span>
+                    <span class="textinho">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
+                        to allow notepads, pens, and USB sticks to be stored under the stand.</span>
+                </div>
+                <div class="quadrados">
+                    <div class="bamboo">
+                        <div class="linha">
+                            <span class="about">Bamboo Stand</span>
+                            <span>Pledge $25 or more</span>
+                        </div>
+                    </div>
+                    <div class="black">
+
+                    </div>
+                    <div class="mahogany">
+
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </main>
+        <img class ="logo-mastercraft" src="images/logo-mastercraft.svg"/>
 </body>
 <script src="script.js"></script>
 </html>
