--- a/pwfe/Frontend Mentor/Crowdfunding/index.html
+++ b/pwfe/Frontend Mentor/Crowdfunding/index.html
@@ -18,6 +18,7 @@
             </div>
         </div>
     </header>
+    <main>
         <div class="meinho">
             <div class="first-container">
                 <span class="mastercraft">Mastercraft Bamboo Monitor Riser</span>
@@ -43,7 +44,7 @@
                         <span class="sem-negrito">days left</span>
                     </div>
                 </div>
-                <progress class="progress" value="75" max="100"></progress>
+                <progress class="progress" value="89" max="100"></progress>
             </div>
 
             <div class="third-container">
@@ -53,27 +54,61 @@
                         to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
                         your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
                       </span>
-                    <span class="textinho">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
+                    <span class="textinho2">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
                         to allow notepads, pens, and USB sticks to be stored under the stand.</span>
                 </div>
                 <div class="quadrados">
                     <div class="bamboo">
                         <div class="linha">
-                            <span class="about">Bamboo Stand</span>
-                            <span>Pledge $25 or more</span>
+                            <span class="title">Bamboo Stand</span>
+                            <span class="price">Pledge $25 or more</span>
+                        </div>
+                        <span class="description">You get an ergonomic stand made of natural bamboo. You've helped us launch 
+                            our promotional campaign, and you’ll be added to a special Backer member list.</span>
+                        <div class="quantidade">
+                            <div class="left">
+                                <span class="negrito">101</span>
+                                <span class="sem-negrito">left</span>
+                            </div>
+                            <button class="reward">Select Reward</button>
                         </div>
                     </div>
                     <div class="black">
-
+                        <div class="linha">
+                            <span class="title">Black Edition Stand</span>
+                            <span class="price">Pledge $75 or more</span>
+                        </div>
+                        <span class="description">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+                            member list. Shipping is included.</span>
+                        <div class="quantidade">
+                            <div class="left">
+                                <span class="negrito">64</span>
+                                <span class="sem-negrito">left</span>
+                            </div>
+                            <button class="reward">Select Reward</button>
+                        </div>
                     </div>
                     <div class="mahogany">
-
+                        <div class="linha">
+                            <span class="title">Mahogany Special Edition</span>
+                            <span class="price">Pledge $200 or more</span>
+                        </div>
+                        <span class="description">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+                            to our Backer member list. Shipping is included.</span>
+                        <div class="quantidade">
+                            <div class="left">
+                                <span class="negrito">0</span>
+                                <span class="sem-negrito">left</span>
+                            </div>
+                            <button class="reward">Out of Stock</button>
+                        </div>
                     </div>
                 </div>
             </div>
 
         </div>
         <img class ="logo-mastercraft" src="images/logo-mastercraft.svg"/>
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
