--- a/pwfe/Pokedex/index.html
+++ b/pwfe/Pokedex/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://i.pinimg.com/originals/32/eb/23/32eb230b326ee3c76e64f619a06f6ebb.png" type="image/x-icon">
 </head>
-<body>
+<body onload="fetchTeste()">
     <h1>pokédex</h1>
-    <div class="poke-container" id="poke-container">
+    <div class="container" id="container">
     </div>
 </body>
 <script src="script.js"></script>
